...
            "state" : "translated",
            "value" : "你"
          }
        }
      }
    },
    "Bạn bè" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Freunde"
          }
...
            "state" : "translated",
            "value" : "欢迎回来"
          }
        }
      }
    },
    "Chat" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Chats"
          }
...
            "state" : "translated",
            "value" : "暂无可转发的会话。"
          }
        }
      }
    },
    "Chưa có tài khoản? Đăng ký" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Noch kein Konto? Registrieren"
          }
...
            "state" : "translated",
            "value" : "注册"
          }
        }
      }
    },
    "Đăng nhập" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Anmelden"
          }
...
            "state" : "translated",
            "value" : "正在回复自己"
          }
        }
      }
    },
    "Đăng xuất" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abmelden"
          }
...
        }
      }
    },
    "Điều bạn phóng ra nhiều nhất là " : {

    },
    "Điều hành viên" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Moderator"
          }
...
            "state" : "translated",
            "value" : "使用条款"
          }
        }
      }
    },
    "Đính kèm" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Anhängen"
          }
...
            "state" : "translated",
            "value" : "你的贡献"
          }
        }
      }
    },
    "Email" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "E-Mail"
          }
...
            "state" : "translated",
            "value" : "重新发送文件"
          }
        }
      }
    },
    "Gửi link đặt lại" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Link senden"
          }
...
            "state" : "translated",
            "value" : "最近动态"
          }
        }
      }
    },
    "Hỏi đáp" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Q&A"
          }
...
            "state" : "translated",
            "value" : "保存密码"
          }
        }
      }
    },
    "Mật khẩu" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Passwort"
          }
...
            "state" : "translated",
            "value" : "发消息"
          }
        }
      }
    },
    "Nhắn tin…" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nachricht…"
          }
...
            "state" : "translated",
            "value" : "登录会话已过期，请重新登录。"
          }
        }
      }
    },
    "Quản trị viên" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Administrator"
          }
...
            "state" : "translated",
            "value" : "管理员"
          }
        }
      }
    },
    "Quay lại" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zurück"
          }
...
            "state" : "translated",
            "value" : "骚扰"
          }
        }
      }
    },
    "Quên mật khẩu?" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Passwort vergessen?"
          }
...
            "state" : "translated",
            "value" : "消息"
          }
        }
      }
    },
    "Tin nhắn mới" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Neue Nachricht"
...
            "state" : "translated",
            "value" : "记忆与睡眠"
          }
        }
      }
    },
    "Tuỳ chọn hội thoại" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unterhaltungsoptionen"
          }
...
            "state" : "translated",
            "value" : "看看下面的推荐吧。"
          }
        }
      }
    },
    "Xem hồ sơ" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profil ansehen"
          }
...
